[project]
name = "marimotest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.0.0",
    "marimo[sql]>=0.1.0",
    "numpy>=2.2.6",
    "plotly>=6.1.2",
    "polars[pyarrow]>=1.9.0",
    "psycopg>=3.2.9",
    "scikit-learn>=1.7.0",
    "sqlglot>=23.4",
]
